# KTdsTraining

./: 00.rag-app.py  01.rag_chat.py  README.md  deploy_instructions.md  mvp_project.py  objective.md  pyproject.toml  system_prompt_for_ai_agent.txt
MorningBriefingApp/: Main.py  app.py  deploy_instructions.md  objective.md  streamlit.sh  system_prompt_for_ai_agent.txt
MorningBriefingApp/auth/: google_auth.py
MorningBriefingApp/components/: __init__.py  ui_elements.py
MorningBriefingApp/database/: __init__.py  session.py
MorningBriefingApp/models/: __init__.py  calendar_integration.py  user.py
MorningBriefingApp/services/: azure_agent.py  google_calendar.py  kakao_api.py  ktds_calendar.py  user_service.py  weather_forecast.py
MorningBriefingApp/utils/: formatter.py
