[project]
name = "ktdstraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.0",
    "azure-ai-agents>=1.0.1",
    "azure-ai-projects>=1.0.0b11",
    "azure-core>=1.34.0",
    "azure-identity>=1.23.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.172.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "markdownlit>=0.0.7",
    "openai>=1.86.0",
    "streamlit>=1.45.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-oauth>=0.1.14",
]
